# encoded_light_marker

./: README.md
docker/: Dockerfile_18_04_melodic  Dockerfile_20_04_foxy  Dockerfile_20_04_noetic  build.bash  join.bash  run.bash
workspace/: clang-format-all.sh
workspace/elm_main/: CMakeLists.txt  package.xml
workspace/elm_main/config/: config.rviz
workspace/elm_main/launch/: main.py
workspace/elm_mock/: CMakeLists.txt  package.xml
workspace/elm_mock/include/elm_mock/: ElmMockNode.hpp
workspace/elm_mock/src/: ElmMockNode.cpp  ElmMockNodeMain.cpp
workspace/elm_trackers/: CMakeLists.txt  package.xml
workspace/elm_trackers/include/elm_trackers/: Coordinates2D.hpp  ModulationState.hpp  Time.hpp  ToroidalTrackerDriver.hpp  TrackerCarrierGenerator.hpp  TrackerCarrierGeneratorInterface.hpp  TrackerDrawerInterface.hpp  TrackerDriverInterface.hpp  TrackerId.hpp  TrackerMarker.hpp  TrackerMarkerFactory.hpp
workspace/elm_trackers/include/elm_trackers/correlator/: IQCorrelatorBuffer.hpp  IQCorrelatorBufferInterface.hpp
workspace/elm_trackers/include/elm_trackers/datatypes/: Buffer2D.hpp  CarrierPhase.hpp  Coordinates2D.hpp  ModulationState.hpp  Time.hpp  TrackerId.hpp
workspace/elm_trackers/include/elm_trackers/generators/: TrackerCarrierGenerator.hpp  TrackerCarrierGeneratorInterface.hpp
workspace/elm_trackers/include/elm_trackers/overengineering/: ToroidalTrackerDriver.hpp  TrackerDrawerInterface.hpp  TrackerDriverInterface.hpp  TrackerMarker.hpp  TrackerMarkerFactory.hpp  TrackerMarkerInterface.hpp
workspace/elm_trackers/src/: ToroidalTrackerDriver.cpp  TrackerCarrierGenerator.cpp  TrackerMarker.cpp
workspace/elm_trackers/src/correlator/: IQCorrelatorBuffer.cpp
workspace/elm_trackers/src/datatypes/: Buffer2D.cpp
workspace/elm_trackers/src/generators/: TrackerCarrierGenerator.cpp
workspace/elm_trackers/src/overengineering/: ToroidalTrackerDriver.cpp  TrackerMarker.cpp
workspace/elm_trackers/tests/: test_buffer_2d.cpp  test_iq_correlator_buffer.cpp  test_strategy_id.cpp
